# cicd-with-ai

./: .commitlintrc.json  .env.example  .gitignore  .pr_agent.toml  .pre-commit-config.yaml  CODING_STANDARDS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  copilot-review-instructions.md
.github/workflows/: ai-review.yml  backend-ci.yml  pr-agent.yml
.husky/: commit-msg  pre-commit
alembic/: env.py
app/: main.py
app/api/: router.py
app/api/routes/: chat.py  demo_violations.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  conversation.py  item.py  message.py
app/schemas/: item.py
app/services/: chat_service.py  item_service.py
app/services/providers/: anthropic.py  base.py  google.py
backend/: .env.example  copilot-instructions.md  demo_bad_api.py  demo_pr_agent_review.py  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/models/: __init__.py  conversation.py  message.py
backend/app/schemas/: chat.py  conversation.py
backend/app/services/: chat_service.py
backend/scripts/: verify-all.sh  verify-deps.sh  verify-format.sh  verify-lint.sh  verify-security.sh  verify-tests.sh  verify-types.sh
backend/tests/: conftest.py  test_chat_service.py  test_conversations.py  test_providers.py  test_security.py
frontend/: Dockerfile  copilot-instructions.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ChatBox.tsx  ChatInput.tsx  MessageBubble.tsx  MessageList.tsx  Sidebar.tsx
frontend/src/hooks/: useChat.ts  useConversations.ts
frontend/src/services/: api.ts
frontend/src/types/: chat.ts
openspec/: config.yaml
openspec/changes/backend-local-verify-scripts/: proposal.md  tasks.md
openspec/changes/build-instruction/: tasks.md
openspec/changes/fix-coding-vulnerabilities/: design.md  proposal.md  (+1 more)
scripts/: _common.sh  build-pr-agent-config.sh  local-pr-review.sh  sync-guidelines.sh
tests/: conftest.py  test_demo.py  test_health.py  test_items.py
(+94 files in other folders)
