[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cicd-with-ai"
version = "0.1.0"
description = "Production-ready FastAPI project with PostgreSQL"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
    "ruff>=0.4.0",
    "bandit[toml]>=1.7.0",
    "pre-commit>=3.7.0",
    "aiosqlite>=0.20.0",
    "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",              # isort
    "UP",             # pyupgrade
    "S",              # flake8-bandit (security)
    "B",              # flake8-bugbear
    "A",              # flake8-builtins
    "C4",             # flake8-comprehensions
    "T20",            # flake8-print
    "ANN",            # flake8-annotations (type hints)
    "N",              # pep8-naming
    "RET",            # flake8-return
    "SIM",            # flake8-simplify
    "PT",             # flake8-pytest-style
]
ignore = [
    "S101", "S105", "S106",  # allow assert, hardcoded password bindings
    "ANN401",                # allow Any type
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "T20", "ANN"]
"alembic/**" = ["ANN"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
